--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
   <meta charset="utf-8">
   <title>الوكالة الوطنية للمحافظة العقارية والمسح العقاري والخرائطية</title>
-  <base href="/">
+  <base href="/potail-ancfcc-carto/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico">-->
 
